correction FK pages 1-27

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -64,6 +64,7 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 \section{Metamaterials -- Critique and alternatives}
 TODO TODO At the end, the author would like to express his concern about the efficiency and practical impact of the metamaterial research in the last years. 
 The number of papers related to metamaterials has rocketed in the last decade in almost unprecedented way % todo cite some MM scientometry here
+%\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
 , and 
 the hypertrophic number of publications dissolves the concentration of pertinent ideas in almost a homeopatic way.  
 Perhaps anybody interested in MM will soon notice there are many papers adding just a quantitative difference to what was already published, often without stating this important fact. This may give a superficial feeling of an exponential gathering of knowledge, but in fact it mostly contributes to the information noise. 
