about dispersion in phc

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -715,6 +715,14 @@ j%% TODO understand what this is about
   year={1968},
   publisher={Turpion Ltd}
 }
+@article{oganisian2014observation,
+  title={Observation of negative refraction in the graphene/ferrite composite},
+  author={Oganisian, Karen and Strek, Wieslaw},
+  journal={physica status solidi (RRL)-Rapid Research Letters},
+  volume={9999},
+  year={2014},
+  publisher={Wiley Online Library}
+}
 
 
 
